--- a/README.Rmd
+++ b/README.Rmd
@@ -12,22 +12,29 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Turn pdf document into XML
+# trickypdf: 
 
-This is an experimental package to turn a pdf document document into a XML document
-for further processing in a corpus preparation pipeline.
+## Purpose
 
-The class PDF includes a set of methods to handle somewhat tricky problems that may 
-arise when processing pdf documents:
-- Text outside a region (such as page numbers) can be removed based in coordinates;
-- Two columns can be rearranged so that a two-column-layout can be managed;
-- If the document has been scanned in tilted fashion, lines are reconstructed;
-- Paragraphs can be reconstructed based on a simple heuristic.
+At a basic level, R users have efficient tools to extract text from pdf documents.
+The [pdftools](https://CRAN.R-project.org/package=pdftools), and the [Rpoppler](https://CRAN.R-project.org/package=Rpoppler) packages are powerful tools.
 
-Comparing pdf2xml to other packages such as poppleR or pdftools, the existing packages
-do not offer the aforementioned pruning and reconstruction capability.
+The *trickypdf* package offers a class *PDF* to handle tricky problems that reoccurringly
+cause headaches when processing pdf documents with . , i.e.:
+- remove stuff outside the main text region (page headers, page numbers etc) as a preprocessing step. 
+- handle multi-column layouts;
+- reconstruct lines of text, if the (OCRed) document has been scanned in tilted fashion;
+- reconstruct paragraphs.
 
+The output will be a valid XML document, with optional document metadata. The XML output
+is meant to serve as the input to a Natural Language Processing (NLP) pipeline. A method to 
+create browsable html from the xmlified pdf document is meant to assist quality checking in 
+corpus preparation.
 
-# Contributing to package development
+## Installation
+
+## Usage
+
+## Contributing to package development
 
 Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
