--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# trickypdf: 
+# trickypdf
 
 ## Purpose
 
@@ -21,10 +21,10 @@ The [pdftools](https://CRAN.R-project.org/package=pdftools), and the [Rpoppler](
 
 The *trickypdf* package offers a class *PDF* to handle tricky problems that reoccurringly
 cause headaches when processing pdf documents with . , i.e.:
-- remove stuff outside the main text region (page headers, page numbers etc) as a preprocessing step. 
-- handle multi-column layouts;
-- reconstruct lines of text, if the (OCRed) document has been scanned in tilted fashion;
-- reconstruct paragraphs.
+* remove stuff outside the main text region (page headers, page numbers etc) as a preprocessing step. 
+* handle multi-column layouts;
+* reconstruct lines of text, if the (OCRed) document has been scanned in tilted fashion;
+* reconstruct paragraphs.
 
 The output will be a valid XML document, with optional document metadata. The XML output
 is meant to serve as the input to a Natural Language Processing (NLP) pipeline. A method to 
